# sting

./: .bazelrc  .gitattributes  .gitignore  .travis.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  TODO.md  build.yaml  buildfile  package-lock.json
core/: BUILD.bazel
core/src/main/java/sting/: ActAsStingComponent.java  ActAsStingConsumer.java  ActAsStingProvider.java  AutoFragment.java  BUILD.bazel  Component.java  ContributeTo.java  Dependency.java  Eager.java  Factory.java  Feature.java  Fragment.java  Injectable.java  Injector.java  InjectorFragment.java  Module.java  Named.java  NecessityType.java  Provider.java  Provides.java  Qualifier.java  Service.java  Sting.gwt.xml  StingProvider.java  Typed.java  package-info.java
core/src/main/java/sting/interceptors/: After.java  AfterException.java  Arguments.java  Around.java  BUILD.bazel  Before.java  BindingValue.java  InterceptorBinding.java  Invocation.java  MethodName.java  Proceed.java  Result.java  ServiceType.java  Thrown.java  package-info.java
doc-examples/: BUILD.bazel
integration-tests/src/test/java/sting/integration/: AbstractIntegrationTest.java  BUILD.bazel  BasicAutoFragmentIntegrationTest.java  BasicIntegrationTest.java  CollectionOutputCachedIntegrationTest.java  EagerDependenciesIntegrationTest.java  FactoryIntegrationTest.java  FactoryParameterAnnotationsIntegrationTest.java  InputsIntegrationTest.java  InterceptorsIntegrationTest.java  MultiplePublishedTypesDependenciesIntegrationTest.java  OptionalRequestsIntegrationTest.java  PrimitiveBoxedInteropIntegrationTest.java  ProviderFragmentAutoDiscoveryIntegrationTest.java  ProviderInjectableAnnotatedAutoDiscoveryIntegrationTest.java  ProviderInjectableAnnotatedIncludedIntegrationTest.java  ProviderInjectableAutoDiscoveryIntegrationTest.java  TypedProviderMethodIntegrationTest.java
integration-tests/src/test/java/sting/integration/other/: BUILD.bazel  MyInjector.java  PackageAccessInDifferentPackagesIntegrationTest.java
performance-benchmarks/: BUILD.bazel
performance-benchmarks/data/sting-0.05__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.06__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.07__dagger-2.25.2/: code-size.properties
performance-benchmarks/data/sting-0.09__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.10__dagger-2.25.2/: code-size.properties
performance-benchmarks/data/sting-0.14__dagger-2.25.2/: BUILD.bazel  code-size.properties
performance-benchmarks/data/sting-0.15__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.17__dagger-2.25.2/: BUILD.bazel  build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.21__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.25__dagger-2.25.2/: BUILD.bazel  build-times.properties
performance-benchmarks/data/sting-0.28__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.29__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.30__dagger-2.25.2/: build-times.properties  code-size.properties
performance-benchmarks/data/sting-0.38__dagger-2.25.2/: code-size.properties
performance-benchmarks/src/main/java/sting/performance/benchmarks/: BUILD.bazel  BenchmarkCommand.java  BenchmarkDataFile.java  BenchmarkDataValidator.java  BenchmarkMode.java  (+21 more)
processor/: BUILD.bazel
processor/src/main/java/sting/processor/: AutoFragmentDescriptor.java  AutoFragmentGenerator.java  BUILD.bazel  Binding.java  BindingRegistry.java  BindingValueKind.java  BindingValueModel.java  BindingValueModelImpl.java  CircularDependencyChecker.java  ComponentGraph.java  Constants.java  ContributorDescriptor.java  Coordinate.java  Dependency.java  DependencyDescriptor.java  DependencyRequest.java  DescriptorIO.java  Edge.java  FactoryDependencyDescriptor.java  FactoryDescriptor.java  FactoryGenerator.java  FactoryMethodDescriptor.java  FragmentDescriptor.java  FragmentGenerator.java  FragmentNode.java  IOUtil.java  IncludeDescriptor.java  InjectableDescriptor.java  InjectableGenerator.java  InjectorDescriptor.java  InjectorDotReportGenerator.java  InjectorGenerator.java  InjectorProviderGenerator.java  InputDescriptor.java  InterceptedMethodModel.java  InterceptedMethodModelImpl.java  InterceptedServiceDescriptor.java  InterceptorBindingDescriptor.java  InterceptorBindingModel.java  InterceptorCodeGenerator.java  (+27 more)
processor/src/test/fixtures/: BUILD.bazel
processor/src/test/fixtures/bad_input/: BUILD.bazel
processor/src/test/fixtures/bad_input/com/: BUILD.bazel
processor/src/test/fixtures/expected/: BUILD.bazel
processor/src/test/fixtures/expected/com/: BUILD.bazel
processor/src/test/fixtures/expectedFormatted/: BUILD.bazel
processor/src/test/fixtures/expectedFormatted/com/: BUILD.bazel
processor/src/test/fixtures/input/: BUILD.bazel  NoPackageModel.java
processor/src/test/fixtures/input/com/: BUILD.bazel
processor/src/test/fixtures/input/org/: BUILD.bazel
processor/src/test/fixtures/unresolved/: BUILD.bazel
processor/src/test/fixtures/unresolved/com/: BUILD.bazel
processor/src/test/java/sting/processor/: AbstractStingProcessorTest.java  BUILD.bazel  BindingTest.java  StingProcessorBadDescriptorTest.java  StingProcessorInjectorGraphTest.java  StingProcessorMultiStageCompilesTest.java  StingProcessorNoJsonTest.java  StingProcessorRuntimeDeriveTest.java  StingProcessorTest.java
server/: BUILD.bazel
server/src/main/java/sting/server/: BUILD.bazel  MandatoryTransactionInterceptor.java  NeverTransactionInterceptor.java  NotSupportedTransactionInterceptor.java  RequiredTransactionInterceptor.java  RequiresNewTransactionInterceptor.java  SupportsTransactionInterceptor.java  TransactionInterceptorSupport.java  Transactional.java  package-info.java
server/src/test/java/sting/server/: TransactionInterceptorTest.java
(+2121 files in other folders)
