load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "doc-examples",
    srcs = glob(["src/main/java/**/*.java"]),
    plugins = ["//processor:sting_processor_plugin"],
    deps = [
        "//core",
        "//third_party/java:javax_annotation",
    ],
)
