load("//third_party/java:rules.bzl", "java_library", "java_plugin")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "processor",
    exports = ["//processor/src/main/java/sting/processor"],
)

java_plugin(
    name = "sting_processor_plugin",
    processor_class = "sting.processor.StingProcessor",
    deps = ["//processor/src/main/java/sting/processor"],
)
