package(default_visibility = ["//visibility:public"])

filegroup(
    name = "local_files",
    srcs = [
        "NoPackageModel.java",
    ],
)

filegroup(
    name = "all",
    srcs = [
        ":local_files",
        "//processor/src/test/fixtures/input/com:all",
        "//processor/src/test/fixtures/input/org:all",
    ],
)
