load("//third_party/java:rules.bzl", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "processor",
    srcs = [
        "Binding.java",
        "BindingValueKind.java",
        "BindingValueModel.java",
        "CircularDependencyChecker.java",
        "ComponentGraph.java",
        "Constants.java",
        "Coordinate.java",
        "Edge.java",
        "FactoryDependencyDescriptor.java",
        "FactoryDescriptor.java",
        "FactoryGenerator.java",
        "FactoryMethodDescriptor.java",
        "FragmentDescriptor.java",
        "FragmentGenerator.java",
        "FragmentNode.java",
        "IncludeDescriptor.java",
        "InjectableDescriptor.java",
        "InjectableGenerator.java",
        "InjectorDescriptor.java",
        "InjectorDotReportGenerator.java",
        "InjectorGenerator.java",
        "InjectorProviderGenerator.java",
        "InputDescriptor.java",
        "InterceptedServiceDescriptor.java",
        "InterceptorBindingDescriptor.java",
        "InterceptorDescriptor.java",
        "InterceptorMethodDescriptor.java",
        "InterceptorPhase.java",
        "InterceptorProxyDescriptor.java",
        "InterceptorProxyGenerator.java",
        "LifecycleParameterDescriptor.java",
        "Node.java",
        "PathEntry.java",
        "ProviderEntry.java",
        "Registry.java",
        "ResolveType.java",
        "ServiceKey.java",
        "ServiceRequest.java",
        "ServiceSpec.java",
        "StingGeneratorUtil.java",
        "StingProcessor.java",
        "UnresolvedDeclaredTypeException.java",
        "WorkEntry.java",
        "package-info.java",
    ],
    resource_strip_prefix = "processor/src/main/resources",
    resources = [
        "//processor/src/main/resources/META-INF/services:processor_service",
    ],
    deps = [
        "//third_party/java:javapoet",
        "//third_party/java:javax_annotation",
        "//third_party/java:javax_json",
        "//third_party/java:proton_core",
    ],
)
