package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all",
    srcs = [
        "//processor/src/test/fixtures/expected/com/example/factory:all",
        "//processor/src/test/fixtures/expected/com/example/fragment:all",
        "//processor/src/test/fixtures/expected/com/example/injectable:all",
        "//processor/src/test/fixtures/expected/com/example/injector:all",
        "//processor/src/test/fixtures/expected/com/example/integration:all",
        "//processor/src/test/fixtures/expected/com/example/interceptor:all",
    ],
)
