package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all",
    srcs = [
        "//processor/src/test/fixtures/input/com/example/bad_descriptors:all",
        "//processor/src/test/fixtures/input/com/example/deprecated:all",
        "//processor/src/test/fixtures/input/com/example/factory:all",
        "//processor/src/test/fixtures/input/com/example/fragment:all",
        "//processor/src/test/fixtures/input/com/example/injectable:all",
        "//processor/src/test/fixtures/input/com/example/injector:all",
        "//processor/src/test/fixtures/input/com/example/integration:all",
        "//processor/src/test/fixtures/input/com/example/interceptor:all",
        "//processor/src/test/fixtures/input/com/example/meta:all",
        "//processor/src/test/fixtures/input/com/example/multiround:all",
        "//processor/src/test/fixtures/input/com/example/multistage:all",
        "//processor/src/test/fixtures/input/com/example/named:all",
        "//processor/src/test/fixtures/input/com/example/provider_backed:all",
    ],
)
