load("//third_party/java:rules.bzl", "java_testng")

java_testng(
    name = "all_tests",
    srcs = glob(["*.java"]),
    plugins = ["//processor:sting_processor_plugin"],
    test_class = "sting.server.integration.ServerTransactionalIntegrationTest",
    deps = [
        "//core",
        "//server",
        "//third_party/java:jakarta_transaction_api",
        "//third_party/java:javax_annotation",
    ],
)
