load("//third_party/java:rules.bzl", "doc_examples_java_library")

package(default_visibility = ["//visibility:public"])

doc_examples_java_library(
    name = "dependency_kinds",
    srcs = [
        "ErrorResponder.java",
        "ImageConverter.java",
        "ImageReader.java",
        "ImageToolsFragment.java",
        "ImageWriter.java",
        "MyInjector.java",
    ],
    plugins = [
        "//processor:sting_processor_plugin",
    ],
    deps = [
        "//core",
        "//third_party/java:javax_annotation",
    ],
)
