load("//third_party/java:rules.bzl", "doc_examples_java_library")

package(default_visibility = ["//visibility:public"])

doc_examples_java_library(
    name = "interceptors",
    srcs = [
        "AccountService.java",
        "AccountServiceImpl.java",
        "AuditInterceptor.java",
        "Audited.java",
        "InterceptorsInjector.java",
        "NotificationAuditTrail.java",
        "NotificationFragment.java",
        "NotificationSender.java",
        "NotificationService.java",
        "PaymentFragment.java",
        "PaymentGateway.java",
        "Timed.java",
        "TimingInterceptor.java",
        "Validated.java",
        "ValidationInterceptor.java",
    ],
    plugins = [
        "//processor:sting_processor_plugin",
    ],
    deps = [
        "//core",
        "//third_party/java:javax_annotation",
    ],
)
